--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^20",
