--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.2.4",
+    "locomotive-scroll": "^4.1.4",
     "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "react": "^18",
