--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "split-type": "^0.3.4"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
