feat: lenis-scroll 적용

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@studio-freight/lenis": "^1.0.42",
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.2.4",
-    "locomotive-scroll": "^4.1.4",
     "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "react": "^18",
@@ -20,7 +20,6 @@
     "split-type": "^0.3.4"
   },
   "devDependencies": {
-    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
