--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.2.4",
     "lottie-react": "^2.4.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "split-type": "^0.3.4"
