--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-loader": "^6.2.0",
     "framer-motion": "^11.2.4",
     "lottie-react": "^2.4.0",
+    "lottie-react-native": "^6.7.2",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
